youfull/objects/DownloadAll_GenIndex__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>The hierarchical custom setting to store the genealogy level of the logged in or the currently impersonating user.</description>
    <fields>
        <fullName>Accnt_Nr__c</fullName>
        <description>Stores the logged in user&apos;s account number</description>
        <inlineHelpText>Stores the logged in user&apos;s account number</inlineHelpText>
        <label>Accnt Nr</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Object_Name__c</fullName>
        <label>Data Object Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gen_Index__c</fullName>
        <label>Gen Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Id__c</fullName>
        <label>Market Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SelectedCampaign__c</fullName>
        <description>Campaign selected by the user to view the report.</description>
        <label>SelectedCampaign</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>DownloadAll Gen Level</label>
</CustomObject>